[package]
name = "kuma-remote"

description = "Uptime Kuma push monitor client"
authors = ["Imthatguyhere (ITGH | Tyler)"]
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
humantime-serde = "1.1.1"
pinger = "2.1.4"
reqwest = { version = "0.13.4", features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
strict-yaml-rust = { version = "0.2.0", features = ["serde"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
